# api-forecast-kolam

./: .gitignore  README.md  app.py  pyproject.toml  replit.md  test.py
api/: routes.py
data/: model_lstm.h5  sample_model.pkl  scaler_X.pkl  scaler_y.pkl
models/: forecast_model.py
static/css/: custom.css
static/js/: api-client.js
templates/: documentation.html  index.html
utils/: cubic_spline_interpolation.py  exp_interpolation.py  generate_sequences.py  interpolations.py  linear.py  log_interpolation.py  monotonic.py  preprocessing.py  validation.py
