[project]
name = "api-forecast-kolam"
version = "0.1.0"
description = "This API use for process request forecast fish in pool"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "scikit-learn>=1.7.1",
    "pandas>=2.3.1",
    "numpy>=2.3.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "api",
    "models",
    "data",
    "static",
    "templates",
    "utils"
]